--- a/Input_or_Output.ipynb
+++ b/Input_or_Output.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "metadata": {
-        "id": "tRsATTZpXW6_",
+        "id": "_AJE3uhpbtnW",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -41,10 +41,10 @@
     },
     {
       "metadata": {
-        "id": "5GlgLVMiXW7C",
+        "id": "P9AmKmQAbtna",
         "colab_type": "code",
-        "outputId": "60caf91d-270d-4004-ffde-7bd483eda726",
-        "colab": {}
+        "colab": {},
+        "outputId": "112a9d63-b7c5-4170-dd2f-5802f9403c70"
       },
       "cell_type": "code",
       "source": [
@@ -96,7 +96,7 @@
     },
     {
       "metadata": {
-        "id": "zUyiPF-hXW7Q",
+        "id": "1EMYoOw3btnl",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -106,10 +106,10 @@
     },
     {
       "metadata": {
-        "id": "wATW1MvuXW7S",
+        "id": "6C_WhEj0btnm",
         "colab_type": "code",
-        "outputId": "61d1cdd3-291b-4857-a066-7aec0d801844",
-        "colab": {}
+        "colab": {},
+        "outputId": "02707056-f204-49d1-8938-5d96c91bf633"
       },
       "cell_type": "code",
       "source": [
@@ -139,7 +139,7 @@
     },
     {
       "metadata": {
-        "id": "NiOJ5GbxXW7a",
+        "id": "MLjjZxHCbtnt",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -149,10 +149,10 @@
     },
     {
       "metadata": {
-        "id": "Ymh5BVjGXW7d",
+        "id": "OxPo5ZSCbtnu",
         "colab_type": "code",
-        "outputId": "454eb469-b8b4-4976-ee80-469cb0c14b9c",
-        "colab": {}
+        "colab": {},
+        "outputId": "344ec67b-fef1-4633-ca8e-77970fddf2dd"
       },
       "cell_type": "code",
       "source": [
@@ -184,7 +184,7 @@
     },
     {
       "metadata": {
-        "id": "P_-vCPgHXW7o",
+        "id": "YGAIDC5tbtn1",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -194,10 +194,10 @@
     },
     {
       "metadata": {
-        "id": "ZoAZEVsIXW7r",
+        "id": "qXJOpK2Hbtn4",
         "colab_type": "code",
-        "outputId": "ed184f91-681f-4020-e024-5abd55d2cd9c",
-        "colab": {}
+        "colab": {},
+        "outputId": "6659799b-b1e7-4dcc-d639-bb2f2d1137a5"
       },
       "cell_type": "code",
       "source": [
@@ -229,10 +229,10 @@
     },
     {
       "metadata": {
-        "id": "SpCyFvL8XW7x",
+        "id": "Ja-Ep5-4btn-",
         "colab_type": "code",
-        "outputId": "d79c0b13-7a38-4231-f7e2-2a4517e9d74a",
-        "colab": {}
+        "colab": {},
+        "outputId": "373b5105-ef6c-40e8-bab9-eebd687c2660"
       },
       "cell_type": "code",
       "source": [
@@ -263,7 +263,7 @@
     },
     {
       "metadata": {
-        "id": "G_eWXJNZXW76",
+        "id": "fiINAEuBbtoH",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -273,10 +273,10 @@
     },
     {
       "metadata": {
-        "id": "kJtDWbhBXW77",
+        "id": "VJd6wdDlbtoJ",
         "colab_type": "code",
-        "outputId": "8320ae83-4cce-46e1-a6cf-6688546b31e5",
-        "colab": {}
+        "colab": {},
+        "outputId": "98d10829-1b46-4f30-ccc4-ff5413a7d045"
       },
       "cell_type": "code",
       "source": [
@@ -326,7 +326,7 @@
     },
     {
       "metadata": {
-        "id": "9IjPpGyCXW8C",
+        "id": "HFlDcEpCbtoT",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -336,7 +336,7 @@
     },
     {
       "metadata": {
-        "id": "f8rNtevyXW8F",
+        "id": "VaXJAfbKbtoV",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -353,7 +353,7 @@
     },
     {
       "metadata": {
-        "id": "cG7Alax1XW8H",
+        "id": "tXxaeW7dbtoX",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -363,7 +363,7 @@
     },
     {
       "metadata": {
-        "id": "INvEqb-SXW8K",
+        "id": "GPuyBjLHbtoa",
         "colab_type": "raw"
       },
       "cell_type": "markdown",
@@ -373,10 +373,10 @@
     },
     {
       "metadata": {
-        "id": "bky3hYoQXW8L",
+        "id": "uiPxFa9vbtoc",
         "colab_type": "code",
-        "outputId": "8f3de6c7-b491-4a10-a082-4cf4ca927d74",
-        "colab": {}
+        "colab": {},
+        "outputId": "1293cd91-dc3b-4130-9781-804fd7cd374c"
       },
       "cell_type": "code",
       "source": [
@@ -474,10 +474,10 @@
     },
     {
       "metadata": {
-        "id": "RXtCk1Y6XW8Q",
+        "id": "V1GY-vnmbtol",
         "colab_type": "code",
-        "outputId": "4add4b08-0bc3-4b84-e495-c01f221b0d83",
-        "colab": {}
+        "colab": {},
+        "outputId": "9cc88908-4f08-4af1-c705-f0487594c317"
       },
       "cell_type": "code",
       "source": [
@@ -562,7 +562,7 @@
     },
     {
       "metadata": {
-        "id": "LrIXhvpfXW8W",
+        "id": "Po8pfWPObtou",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -574,7 +574,7 @@
     },
     {
       "metadata": {
-        "id": "OsfgIS8fXW8X",
+        "id": "4yWKHRKcbtow",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -586,10 +586,10 @@
     },
     {
       "metadata": {
-        "id": "TELt8vJsXW8Y",
+        "id": "KcAhL6EPbtoy",
         "colab_type": "code",
-        "outputId": "5362b1c1-4e00-4082-cf33-fb25a2a31ae1",
-        "colab": {}
+        "colab": {},
+        "outputId": "338e20fe-b0ff-478b-91b2-c33b0200a646"
       },
       "cell_type": "code",
       "source": [
@@ -685,10 +685,10 @@
     },
     {
       "metadata": {
-        "id": "m-AM_vcEXW8e",
+        "id": "Uzim765lbto5",
         "colab_type": "code",
-        "outputId": "b94f7df2-7cc6-4eec-d21e-4bbb49f27490",
-        "colab": {}
+        "colab": {},
+        "outputId": "849657d5-f7b6-45c6-df4c-6304eae41bb0"
       },
       "cell_type": "code",
       "source": [
@@ -779,24 +779,24 @@
     },
     {
       "metadata": {
-        "id": "cp8SrD42XW8l",
+        "id": "ajwoHuk2btpA",
         "colab_type": "code",
-        "outputId": "cdd7fe63-1899-4f61-f0bc-2abb7c06ef52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "3b0e4da7-77d4-43a8-b52e-bf2739678173"
       },
       "cell_type": "code",
       "source": [
-        "print('testing of colab')"
+        "print(\"testing google's colab\")"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "testing of colab\n"
+            "testing google's colab\n"
           ],
           "name": "stdout"
         }
@@ -804,7 +804,7 @@
     },
     {
       "metadata": {
-        "id": "0TgjHjwJXdFM",
+        "id": "nprGY2qGb1rw",
         "colab_type": "code",
         "colab": {}
       },
