--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -78,8 +78,8 @@
       "metadata": {
         "id": "sCwvrqXGVRn9",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6fcabdbd-54e8-4ca4-cc10-80fc3b428e43"
+        "outputId": "6fcabdbd-54e8-4ca4-cc10-80fc3b428e43",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -127,8 +127,8 @@
       "metadata": {
         "id": "6meoUyufVRoI",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6adeb629-ebc8-42a9-9502-cddc197685ac"
+        "outputId": "6adeb629-ebc8-42a9-9502-cddc197685ac",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -178,8 +178,8 @@
       "metadata": {
         "id": "o_MA9RYNVRoO",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "74be7f91-55dc-4c4a-ea89-ad016f1e3925"
+        "outputId": "74be7f91-55dc-4c4a-ea89-ad016f1e3925",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -237,8 +237,8 @@
       "metadata": {
         "id": "LfNZ0uJHVRoV",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5e14da64-68be-47ea-c29b-77b5e3c03b63"
+        "outputId": "5e14da64-68be-47ea-c29b-77b5e3c03b63",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -1960,8 +1960,8 @@
       "metadata": {
         "id": "LjsX_30fVRss",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "82f09db2-7334-4403-a791-d8c9c246c6bb"
+        "outputId": "82f09db2-7334-4403-a791-d8c9c246c6bb",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -2032,8 +2032,8 @@
       "metadata": {
         "id": "JM75_e4SVRsv",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0a700650-5da0-4cf2-ace6-fc437af8feda"
+        "outputId": "0a700650-5da0-4cf2-ace6-fc437af8feda",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -2156,8 +2156,8 @@
       "metadata": {
         "id": "nPMQcHuVVRs1",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "cbcc7faf-38dd-494a-ccf4-b02fd9bde11a"
+        "outputId": "cbcc7faf-38dd-494a-ccf4-b02fd9bde11a",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -2251,22 +2251,22 @@
       "metadata": {
         "id": "igFdRhc9VRs4",
         "colab_type": "code",
+        "outputId": "627edc8e-c3ec-4fce-c353-8a8f3b4579d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "09753aea-4951-497b-a50f-11389944f994"
+        }
       },
       "cell_type": "code",
       "source": [
-        "print('rajesh')"
+        "print(\"Testing Google's Colab\")"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "rajesh\n"
+            "Testing Google's Colab\n"
           ],
           "name": "stdout"
         }
