--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -22,11 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        updates
         "<a href=\"https://colab.research.google.com/github/rajeshkumarkarra/Learn_Python/blob/updates/Basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-
-        "<a href=\"https://colab.research.google.com/github/rajeshkumarkarra/Learn_Python/blob/master/Basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-        master
       ]
     },
     {
@@ -2288,7 +2284,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-     updates
     },
     {
       "metadata": {
@@ -2312,18 +2307,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "232c8210-91f0-4ba1-efcd-e28221fd5f99"
+        "outputId": "c9c5cee3-779c-4e01-e3fd-ebdcd79d1d67"
       },
       "cell_type": "code",
       "source": [
-        "print(\"hello world\")"
+        "print(\"testing colab\")"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello world\n"
+            "testing colab\n"
           ],
           "name": "stdout"
         }
@@ -2341,8 +2336,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-
-       master
     }
   ]
 }
