--- a/Input_or_Output.ipynb
+++ b/Input_or_Output.ipynb
@@ -9,10 +9,10 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rajeshkumarkarra/Learn_Python/blob/master/Input_or_Output.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rajeshkumarkarra/Learn_Python/blob/updates/Input_or_Output.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,8 +43,8 @@
       "metadata": {
         "id": "P9AmKmQAbtna",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "112a9d63-b7c5-4170-dd2f-5802f9403c70"
+        "outputId": "112a9d63-b7c5-4170-dd2f-5802f9403c70",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -108,8 +108,8 @@
       "metadata": {
         "id": "6C_WhEj0btnm",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "02707056-f204-49d1-8938-5d96c91bf633"
+        "outputId": "02707056-f204-49d1-8938-5d96c91bf633",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -151,8 +151,8 @@
       "metadata": {
         "id": "OxPo5ZSCbtnu",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "344ec67b-fef1-4633-ca8e-77970fddf2dd"
+        "outputId": "344ec67b-fef1-4633-ca8e-77970fddf2dd",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -196,8 +196,8 @@
       "metadata": {
         "id": "qXJOpK2Hbtn4",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6659799b-b1e7-4dcc-d639-bb2f2d1137a5"
+        "outputId": "6659799b-b1e7-4dcc-d639-bb2f2d1137a5",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -231,8 +231,8 @@
       "metadata": {
         "id": "Ja-Ep5-4btn-",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "373b5105-ef6c-40e8-bab9-eebd687c2660"
+        "outputId": "373b5105-ef6c-40e8-bab9-eebd687c2660",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -275,8 +275,8 @@
       "metadata": {
         "id": "VJd6wdDlbtoJ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "98d10829-1b46-4f30-ccc4-ff5413a7d045"
+        "outputId": "98d10829-1b46-4f30-ccc4-ff5413a7d045",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -375,8 +375,8 @@
       "metadata": {
         "id": "uiPxFa9vbtoc",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1293cd91-dc3b-4130-9781-804fd7cd374c"
+        "outputId": "1293cd91-dc3b-4130-9781-804fd7cd374c",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -474,10 +474,60 @@
     },
     {
       "metadata": {
+        "id": "8KIKJnIezZTx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "c7de3cc2-bbf5-4b9b-a4fd-67deddbbc244"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Example Multiple Inputs\n",
+        "\n",
+        "x,y = input(\"Enter a two variables\").split()\n",
+        "print(\"the value of 'x':\", x)\n",
+        "print(\"the value of 'y':\", y)\n",
+        "\n",
+        "x,y,z = input(\"Enter a three variables\").split()\n",
+        "print(\"the value of 'x': \", x)\n",
+        "print(\"the value of 'y':\", y)\n",
+        "print(\"the value of 'z': \", z)\n",
+        "\n",
+        "a,b = input(\"Enter the two variables: \").split()\n",
+        "print(\"the value of a is {} and the value of b is {}\".format(a,b))\n",
+        "\n",
+        "x = list(map(int, input(\"enter the multiple values\").split()))\n",
+        "print(\"multiple values of 'x': \", x)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a two variables10 20 \n",
+            "the value of 'x': 10\n",
+            "the value of 'y': 20\n",
+            "Enter a three variables10 20 30\n",
+            "the value of 'x':  10\n",
+            "the value of 'y': 20\n",
+            "the value of 'z':  30\n",
+            "Enter the two variables: 10 20\n",
+            "the value of a is 10 and the value of b is 20\n",
+            "enter the multiple values10 20 30 40 50 60\n",
+            "multiple values of 'x':  [10, 20, 30, 40, 50, 60]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "V1GY-vnmbtol",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "9cc88908-4f08-4af1-c705-f0487594c317"
+        "outputId": "9cc88908-4f08-4af1-c705-f0487594c317",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -588,8 +638,8 @@
       "metadata": {
         "id": "KcAhL6EPbtoy",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "338e20fe-b0ff-478b-91b2-c33b0200a646"
+        "outputId": "338e20fe-b0ff-478b-91b2-c33b0200a646",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -687,8 +737,8 @@
       "metadata": {
         "id": "Uzim765lbto5",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "849657d5-f7b6-45c6-df4c-6304eae41bb0"
+        "outputId": "849657d5-f7b6-45c6-df4c-6304eae41bb0",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -781,17 +831,17 @@
       "metadata": {
         "id": "ajwoHuk2btpA",
         "colab_type": "code",
+        "outputId": "3b0e4da7-77d4-43a8-b52e-bf2739678173",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "3b0e4da7-77d4-43a8-b52e-bf2739678173"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(\"testing google's colab\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +854,7 @@
     },
     {
       "metadata": {
-        "id": "nprGY2qGb1rw",
+        "id": "9RIiq1LG3T8c",
         "colab_type": "code",
         "colab": {}
       },
