--- a/Input_or_Output.ipynb
+++ b/Input_or_Output.ipynb
@@ -6,6 +6,7 @@
       "name": "Input_or_Output.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -476,11 +477,11 @@
       "metadata": {
         "id": "8KIKJnIezZTx",
         "colab_type": "code",
+        "outputId": "c7de3cc2-bbf5-4b9b-a4fd-67deddbbc244",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 215
-        },
-        "outputId": "c7de3cc2-bbf5-4b9b-a4fd-67deddbbc244"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -501,7 +502,7 @@
         "x = list(map(int, input(\"enter the multiple values\").split()))\n",
         "print(\"multiple values of 'x': \", x)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,6 +606,36 @@
           "output_type": "stream",
           "text": [
             "List of students:  [10, 20, 30, 40, 50, 60, 70, 80, 90, 45, 25]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "PtXnK5PpaRJx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "a21f458d-6040-4922-b45e-f8bfce51a1b8"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Example\n",
+        "\n",
+        "x,y = input(\"Enter any two values: \").split()\n",
+        "print(\"value of 'x': {},\\n value of 'y': {}\".format(x,y))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter any two values: 10 20\n",
+            "value of 'x': 10,\n",
+            " value of 'y': 20\n"
           ],
           "name": "stdout"
         }
@@ -831,7 +862,7 @@
       "metadata": {
         "id": "ajwoHuk2btpA",
         "colab_type": "code",
-        "outputId": "3b0e4da7-77d4-43a8-b52e-bf2739678173",
+        "outputId": "e186a955-99bc-4f9e-8e46-cfe45fee9eb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -839,14 +870,14 @@
       },
       "cell_type": "code",
       "source": [
-        "print(\"testing google's colab\")"
+        "print(\"testing of colab-google drive\")"
       ],
       "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "testing google's colab\n"
+            "testing of colab-google drive\n"
           ],
           "name": "stdout"
         }
