--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -6,6 +6,12 @@
       "name": "Basics.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [
+        "QI-MsOteVRo7",
+        "2EHkFlsrVRpt",
+        "3BRjhLbXVRq3",
+        "51Zcsj3yeK4v"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +298,11 @@
       "metadata": {
         "id": "wnwYxqsxVRoa",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "5b59e5fb-9206-45dc-cecf-d24e2138166a"
       },
       "cell_type": "code",
       "source": [
@@ -305,10 +315,28 @@
         "print(\"after deletion\")\n",
         "print(a)\n",
         "\n",
-        "b=[1,2,3]\n"
+        "b=[1,2,3]\n",
+        "print(b)\n",
+        "del(a[1])\n",
+        "del(b[2])\n",
+        "print(a)\n",
+        "print(b)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['rajesh', 'peter', 'john']\n",
+            "after deletion\n",
+            "['rajesh', 'peter']\n",
+            "[1, 2, 3]\n",
+            "['rajesh']\n",
+            "[1, 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -377,7 +405,11 @@
       "metadata": {
         "id": "68LRZAl2VRoh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "outputId": "e367b798-2f66-4ccb-c5f9-ff11070deb1c"
       },
       "cell_type": "code",
       "source": [
@@ -412,14 +444,43 @@
         "type(\"\")\n",
         "type(2.5)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "s is part of geeksforgeeks\n",
+            "g e e k s f o r g e e k s \r\n",
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "metadata": {
         "id": "31xTFWb7VRom",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "6b0dd044-d432-48fb-d676-79b4a8222069"
       },
       "cell_type": "code",
       "source": [
@@ -430,10 +491,32 @@
         "    print(\"s is not part of rajeshkumarkarra\")\n",
         "    \n",
         "for i in 'rajeshkumarkarra':\n",
-        "    print(i, end=\" \")\n"
+        "    print(i, end=\" \")\n",
+        "    \n",
+        "    \n",
+        "# Example 2\n",
+        "\n",
+        "if 's' in \"rajeshkumarkarra\":\n",
+        "  print(\" is in sentense\")\n",
+        "else:\n",
+        "  print(\"isn't in sentense\")\n",
+        "  \n",
+        "  \n",
+        "for i in \"rajesh\":\n",
+        "  print(i, end=\"\")\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "s is part of rajeshkumarkarra\n",
+            "r a j e s h k u m a r k a r r a  is in sentense\n",
+            "rajesh"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -572,10 +655,89 @@
         "    inner()\n",
         "    print(a)\n",
         "outer()\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "GGVu_s4pRhou",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "460f508b-58e7-45e9-acda-217b647ed331"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Example \n",
+        "\n",
+        "a = 100\n",
+        "def read():\n",
+        "  print(a)\n",
+        "\n",
+        "def mod1():\n",
+        "  global a\n",
+        "  a=200\n",
+        "def mod2():\n",
+        "  a=300\n",
+        "  \n",
+        "read()\n",
+        "mod1()\n",
+        "read()\n",
+        "mod2()\n",
+        "read()\n",
+        "\n"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100\n",
+            "200\n",
+            "200\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "bMD5VCfkTkBN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ff438821-ba99-487f-afaf-28987100bffe"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello\")\n",
+        "def outer():\n",
+        "  a = 100\n",
+        "  def inner():\n",
+        "    nonlocal a\n",
+        "    a = 200\n",
+        "    inner()\n",
+        "    print(a)\n",
+        "outer()"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -947,7 +1109,11 @@
       "metadata": {
         "id": "OZ8niRrEVRp7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "aca498b7-e3a3-458b-f09d-c53d434e1e9d"
       },
       "cell_type": "code",
       "source": [
@@ -956,14 +1122,26 @@
         "    print(j, end=\"\")\n",
         "    j = j+1"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12345"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "oXONKunfVRp_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "51a490ce-8b0a-448b-c537-e0f358b39a9b"
       },
       "cell_type": "code",
       "source": [
@@ -973,8 +1151,16 @@
         "    print(count, end=\"\")\n",
         "    count=count+1"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5678910"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -1896,7 +2082,11 @@
       "metadata": {
         "id": "n2AVs4uzVRsg",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "b40733d2-6b7e-4030-94f6-94d015229873"
       },
       "cell_type": "code",
       "source": [
@@ -1907,10 +2097,37 @@
         "    if (i < 15):\n",
         "        print(\"i value is lesser than 15 too: \",+i)\n",
         "    else:\n",
-        "        print(\"i value is greater than 12: \",+i)"
+        "        print(\"i value is greater than 12: \",+i)\n",
+        "        \n",
+        "        \n",
+        "# Example 2\n",
+        "\n",
+        "a = 100\n",
+        "b = 200\n",
+        "c = a+b\n",
+        "if(c == 300):\n",
+        "  if(c<500):\n",
+        "    print(\"c value is lesser than 500:\", +c)\n",
+        "    \n",
+        "  if(c<400):\n",
+        "    print(\"c value is lesser than 400 too: \", +c)\n",
+        "    \n",
+        "  else:\n",
+        "    print(\"c value is greater than 500: \", +c)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "i value is lesser than 12:  10\n",
+            "i value is lesser than 15 too:  10\n",
+            "c value is lesser than 500: 300\n",
+            "c value is lesser than 400 too:  300\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -2261,7 +2478,7 @@
       "source": [
         "print(\"Testing Google's Colab\")"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2303,17 +2520,17 @@
       "metadata": {
         "id": "UC56Cs8peUtm",
         "colab_type": "code",
+        "outputId": "c9c5cee3-779c-4e01-e3fd-ebdcd79d1d67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "c9c5cee3-779c-4e01-e3fd-ebdcd79d1d67"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(\"testing colab\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2327,6 +2544,29 @@
     {
       "metadata": {
         "id": "ReHRtnN0eXj1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ngHDK6X-tNgh",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "! git clone https://github.com/rajeshkumarkarra/LearnPython.git"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ZfD75eRZtUdD",
         "colab_type": "code",
         "colab": {}
       },
